# fs4c

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: 20251001_linear_separable_dataset.md  20251001_ls_svm_service.md  20251001_pytest_plugins.md  README.md
src/: main.py
src/adapter/scripts/: README.md  ls_svm_view.py
src/app/ls_svm/: usecase.py
src/app/service/ls_svm/common/: kernel.py
src/app/service/ls_svm/predict/: args.py  result.py  service.py
src/app/service/ls_svm/train/: args.py  result.py  service.py
src/domain/dataset/linear_separable/: contract.py
src/domain/model/ls_svm/: contract.py
src/infra/dataset/: read.py
src/infra/dataset/linear_separable/: create.py  read.py
src/utils/: logging.py  statistics.py  system.py
tests/app/ls_svm/: test_services.py  test_usecases.py
tests/infra/dataset/: test_linear_separable_read.py
