[project]
name = "fs4c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gurobipy>=12.0.3",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "polars>=1.33.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pyright>=1.1.405",
    "ruff>=0.13.2",
]

[tool.uv]
# uv syncの時にdefaultでinstallする設定
default-groups = ["dev"]

[tool.poe]
# 自動でpoeがuvの仮想環境内でcommandを実行する設定
executor.type = "uv"

[tool.poe.tasks]
fix = 'ruff'

[tool.poe.tasks.'main']
help = "Run main.py"
shell = "python src/main.py"

[tool.poe.tasks.fmt]
help = "Format all files in the current directory"
shell = "ruff format . && ruff check --fix . "

[tool.poe.tasks.lint]
help = "Fix all files format in the current directory"
shell = "ruff format --check . && ruff check --diff . && pyright"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = 60
